tests/models/enum/named/i16/pass/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = "val")]
        value: i16
    },
}
fn main() {}
